// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Launchdarkly's trackUser destination action: all fields 1`] = `
Array [
  Object {
    "creationDate": 1612137600000,
    "data": Object {
      "testType": "BUG!bZp",
    },
    "key": "BUG!bZp",
    "kind": "custom",
    "metricValue": -63287454219632.64,
    "user": Object {
      "key": "BUG!bZp",
    },
  },
]
`;

exports[`Testing snapshot for Launchdarkly's trackUser destination action: required fields 1`] = `
Array [
  Object {
    "creationDate": Any<Number>,
    "data": Object {},
    "key": "BUG!bZp",
    "kind": "custom",
    "user": Object {
      "key": "BUG!bZp",
    },
  },
]
`;
